2014-11-24  Eva Balazsfalvi  <evab.u-szeged@partner.samsung.com>

        Remove Qt cruft related to tap higlighting
        https://bugs.webkit.org/show_bug.cgi?id=139030

        Reviewed by Andreas Kling.

        * CMakeLists.txt:
        * WebProcess/WebPage/TapHighlightController.cpp: Removed.
        * WebProcess/WebPage/TapHighlightController.h: Removed.

2014-11-24  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Unreviewed, EFL build fix since r176530.

        * UIProcess/CoordinatedGraphics/WebView.cpp: Replace pointer with reference.
        (WebKit::WebView::processDidExit):

2014-11-24  Benjamin Poulain  <bpoulain@apple.com>

        [WK2] Remove some bad stuff from WebPageProxy
        https://bugs.webkit.org/show_bug.cgi?id=138896

        Reviewed by Sam Weinig.

        The state loadStateAtProcessExit does not seem to be used anywhere.

        The state urlAtProcessExit only exists to forward the url from
        WebPageProxy::resetStateAfterProcessExited() to the coordinated graphics code
        WebView::processDidExit().

        * UIProcess/CoordinatedGraphics/WebView.cpp:
        (WebKit::WebView::processDidExit):
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::WebPageProxy):
        (WebKit::WebPageProxy::resetStateAfterProcessExited):
        * UIProcess/WebPageProxy.h:
        (WebKit::WebPageProxy::urlAtProcessExit): Deleted.
        (WebKit::WebPageProxy::loadStateAtProcessExit): Deleted.

2014-11-24  Ryuan Choi  <ryuan.choi@navercorp.com>

        [EFL] REGRESSION(176066): It made all performance tests fail
        https://bugs.webkit.org/show_bug.cgi?id=138865

        Reviewed by Csaba Osztrogonác.

        Since r176066, there are crash because evas_gl_surface is destroyed with
        invalid evas_gl instance after evas_gl is destroyed.

        * UIProcess/API/efl/EwkView.cpp:
        (EwkView::~EwkView):

2014-11-24  Alberto Garcia  <berto@igalia.com>

        Webkit2 doesnt build on powerpc 32 bits